--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -16,3 +16,7 @@ theme.dark.done.text=#698248
 theme.dark.type.text=#ffffff
 
 complete=21
+
+theme.font.plain.name=Courier New
+theme.font.plain.style=1
+theme.font.plain.size=24
