--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -16,6 +16,8 @@ theme.dark.done.text=#698248
 theme.dark.type.text=#ffffff
 
 complete=21
+file=text4.txt
+mode=1
 
 theme.font.plain.name=Courier New
 theme.font.plain.style=1
