--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -17,7 +17,9 @@ theme.dark.type.text=#ffffff
 
 complete=21
 file=text4.txt
-mode=1
+mode=0
+#regex=.*[^qwertyuiopQWERTYUIOP].*
+symbol=true
 
 theme.font.plain.name=Courier New
 theme.font.plain.style=1
