--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -20,6 +20,7 @@ file=text4.txt
 mode=0
 #regex=.*[^qwertyuiopQWERTYUIOP].*
 symbol=true
+delay.before.exit=3000
 
 theme.font.plain.name=Courier New
 theme.font.plain.style=1
