--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -16,8 +16,8 @@ theme.dark.done.text=#698248
 theme.dark.type.text=#ffffff
 
 complete=21
-file=text4.txt
-mode=0
+file=huckleberry_finn.txt
+mode=1
 #regex=.*[^qwertyuiopQWERTYUIOP].*
 symbol=true
 delay.before.exit=3000
