--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -16,7 +16,7 @@ theme.dark.done.text=#698248
 theme.dark.type.text=#ffffff
 
 complete=21
-file=huckleberry_finn.txt
+file=huckleberry_finn_1_2.txt
 mode=1
 #regex=.*[^qwertyuiopQWERTYUIOP].*
 symbol=true
