--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -16,7 +16,8 @@ theme.dark.done.text=#698248
 theme.dark.type.text=#ffffff
 
 complete=21000
-file=huckleberry_finn_1_3.txt
+file=huckleberry_finn.txt
+level=5
 mode=1
 #regex=.*[^qwertyuiopQWERTYUIOP].*
 symbol=true
