--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,10 @@ dependencies {
     implementation group: 'commons-io', name: 'commons-io', version: '2.6'
 
     implementation 'commons-codec:commons-codec:1.15'
+
+    implementation 'com.googlecode.soundlibs:tritonus-share:0.3.7-2'
+    implementation 'com.googlecode.soundlibs:mp3spi:1.9.5-1'
+    implementation 'com.googlecode.soundlibs:vorbisspi:1.0.3-1'
 }
 
 test {
