add level listener

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -16,8 +16,9 @@ theme.dark.done.text=#698248
 theme.dark.type.text=#ffffff
 
 complete=21000
-file=huckleberry_finn.txt
-level=22
+file_en=huckleberry_finn_en.txt
+file_ua=huckleberry_finn_ua.txt
+level=35
 mode=1
 #regex=.*[^qwertyuiopQWERTYUIOP].*
 symbol=true
