add props saving

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,29 +1,25 @@
-theme=dark
-#theme=light
-
-theme.light.background=#2b2b2b
-theme.light.border=#893d2a
-theme.light.text=#458ea8
-theme.light.done.border=#7372a9
-theme.light.done.text=#698248
-theme.light.type.text=#7c5450
-
-theme.dark.background=#2b2b2b
-theme.dark.border=#893d2a
-theme.dark.text=#458ea8
-theme.dark.done.border=#7372a9
-theme.dark.done.text=#698248
-theme.dark.type.text=#ffffff
-
-complete=21000
-file_en=huckleberry_finn_en.txt
-file_ua=huckleberry_finn_ua.txt
-level=35
-mode=1
-#regex=.*[^qwertyuiopQWERTYUIOP].*
-symbol=true
-delay.before.exit=3000
-
-theme.font.plain.name=Courier New
+#Store before exit
+#Wed Jul 26 15:33:57 EEST 2023
+level=41
+theme.dark.text=\#458ea8
+theme.dark.border=\#893d2a
+theme.dark.done.border=\#7372a9
 theme.font.plain.style=1
 theme.font.plain.size=24
+theme.light.done.text=\#698248
+file_ua=huckleberry_finn_ua.txt
+delay.before.exit=3000
+theme.light.text=\#458ea8
+theme.light.done.border=\#7372a9
+mode=1
+theme.light.border=\#893d2a
+file_en=huckleberry_finn_en.txt
+complete=21000
+theme.light.background=\#2b2b2b
+theme.font.plain.name=Courier New
+theme.dark.background=\#2b2b2b
+symbol=true
+theme.light.type.text=\#7c5450
+theme.dark.done.text=\#698248
+theme=dark
+theme.dark.type.text=\#ffffff
