--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,6 @@
 #Store before exit
-#Wed Jul 26 15:36:27 EEST 2023
-level=42
+#Thu Jul 27 14:04:46 EEST 2023
+level=40
 theme.dark.text=\#458ea8
 theme.dark.border=\#893d2a
 theme.dark.done.border=\#7372a9
@@ -8,6 +8,7 @@ theme.font.plain.style=1
 theme.font.plain.size=24
 theme.light.done.text=\#698248
 file_ua=huckleberry_finn_ua.txt
+mistake.max=10
 delay.before.exit=3000
 theme.light.text=\#458ea8
 theme.light.done.border=\#7372a9
