add shit & lucky to config

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,6 +1,7 @@
 #Store before exit
-#Fri Jul 28 14:12:37 EEST 2023
-level=54
+#Fri Jul 28 14:36:44 EEST 2023
+sound.level.successes=_lucky,_good_job
+level=2
 theme.dark.text=\#458ea8
 theme.dark.border=\#893d2a
 theme.dark.done.border=\#7372a9
@@ -8,6 +9,7 @@ theme.font.plain.style=1
 theme.font.plain.size=24
 theme.light.done.text=\#698248
 file_ua=huckleberry_finn_ua.txt
+sound.level.fails=_its_not_your_fault,_lets_try_again,_shit
 mistake.max=10
 theme.light.text=\#458ea8
 theme.light.done.border=\#7372a9
