--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,28 +1,28 @@
 #Store before exit
-#Fri Jul 28 15:27:31 EEST 2023
+#Fri Jul 28 15:34:20 EEST 2023
 sound.mistakes=_fuck,_shit
 sound.level.successes=_lucky,_good_job
 level=54
-theme.dark.text=\#458ea8
-theme.dark.border=\#893d2a
-theme.dark.done.border=\#7372a9
+theme.dark.text=0x458ea8
+theme.dark.border=0x893d2a
+theme.dark.done.border=0x7372a9
 theme.font.plain.style=1
 theme.font.plain.size=24
-theme.light.done.text=\#698248
+theme.light.done.text=0x698248
 file_ua=huckleberry_finn_ua.txt
 sound.level.fails=_its_not_your_fault,_lets_try_again
 mistake.max=10
-theme.light.text=\#458ea8
-theme.light.done.border=\#7372a9
-mode=0
-theme.light.border=\#893d2a
+theme.light.text=0x458ea8
+theme.light.done.border=0x7372a9
+mode=1
+theme.light.border=0x893d2a
 complete=21000
 file_en=huckleberry_finn_en.txt
-theme.light.background=\#2b2b2b
+theme.light.background=0x2b2b2b
 theme.font.plain.name=Courier New
-theme.dark.background=\#2b2b2b
+theme.dark.background=0x2b2b2b
 symbol=true
-theme.light.type.text=\#7c5450
-theme.dark.done.text=\#698248
+theme.light.type.text=0x7c5450
+theme.dark.done.text=0x698248
 theme=dark
-theme.dark.type.text=\#ffffff
+theme.dark.type.text=0xffffff
