--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,8 +1,8 @@
 #Store before exit
-#Mon Jul 31 17:02:46 EEST 2023
-sound.mistakes=_fuck,_shit
+#Mon Nov 27 16:55:54 EET 2023
+sound.mistakes=_zih
 sound.level.successes=_lucky,_good_job
-level=58
+level=68
 theme.dark.text=0x458ea8
 theme.dark.border=0x893d2a
 theme.dark.done.border=0x7372a9
@@ -14,7 +14,7 @@ sound.level.fails=_its_not_your_fault,_lets_try_again
 mistake.max=10
 theme.light.text=0x458ea8
 theme.light.done.border=0x7372a9
-mode=1
+mode=0
 theme.light.border=0x893d2a
 file_en=huckleberry_finn_en.txt
 complete=21000
